[gd_scene load_steps=7 format=3 uid="uid://bb0417bjqbder"]

[ext_resource type="Script" path="res://scenes/multi_question_screen.gd" id="1_5wwdr"]
[ext_resource type="Texture2D" uid="uid://b045kf2rp4vw7" path="res://backgrounds/russia.jpg" id="2_fohfu"]
[ext_resource type="Theme" uid="uid://6ceu4e4sceig" path="res://assets/main_theme.tres" id="3_2y1vl"]
[ext_resource type="PackedScene" uid="uid://d0uhms64nhbdq" path="res://scenes/false_correct_popup.tscn" id="3_neh3p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6r2q"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.662745, 0.8, 0.890196, 0.521569)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1elop"]

[node name="MultiQuestionScreen" type="Node"]
script = ExtResource("1_5wwdr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BG" type="TextureRect" parent="CanvasLayer"]
offset_right = 720.0
offset_bottom = 1280.0
texture = ExtResource("2_fohfu")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 72.0
grow_horizontal = 2
size_flags_vertical = 4
theme = ExtResource("3_2y1vl")

[node name="QuestionLabel" type="Label" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme = ExtResource("3_2y1vl")
text = "Question text here..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.5
offset_top = -136.0
offset_right = 80.5
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_i6r2q")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="AnswerCheckBoxesContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2y1vl")
theme_override_styles/separator = SubResource("StyleBoxEmpty_1elop")

[node name="AnswerButton" type="Button" parent="CanvasLayer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_2y1vl")
text = "Ответить"

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2y1vl")
theme_override_styles/separator = SubResource("StyleBoxEmpty_1elop")

[node name="FalseCorrectPopup" parent="CanvasLayer" instance=ExtResource("3_neh3p")]

[connection signal="pressed" from="CanvasLayer/PanelContainer2/VBoxContainer/AnswerButton" to="." method="_check_correctness"]
